--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BIZZPHIX">
-<!--        <activity-->
-<!--            android:name=".Otp_verification_2"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".Otp_verification_1"-->
-<!--            android:exported="false" />-->
-
-
+        <activity
+            android:name=".ClickeditemActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".Otp_verification_2" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".Otp_verification_1" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".Splash_screen"
             android:exported="true">
@@ -28,9 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
