--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        renderscriptTargetApi 21
+
+        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -39,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation files('C:\\Users\\Dell\\Downloads\\Android-SDK-Files\\Android SDK Files\\SDK\\ds-photo-editor-sdk-v10.aar')
     testImplementation 'junit:junit:4.+'
     implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -53,7 +58,17 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.hbb20:ccp:2.5.4'
 
+    // DS Photo Editor SDK
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // SDK related dependencies
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 }
