--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,17 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.BIZZPHIX">
         <activity
             android:name=".ClickeditemActivity"
@@ -31,6 +36,47 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".ResultActivity"/>
+        <activity
+
+            android:name="com.dsphotoeditor.sdk.activity.DsPhotoEditorActivity"
+
+            android:screenOrientation="portrait"
+
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
+
+        <activity
+
+            android:name="com.dsphotoeditor.sdk.activity.DsPhotoEditorStickerActivity"
+
+            android:screenOrientation="portrait"
+
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
+
+        <activity
+
+            android:name="com.dsphotoeditor.sdk.activity.DsPhotoEditorTextActivity"
+
+            android:screenOrientation="portrait"
+
+            android:theme="@android:style/Theme.Holo.NoActionBar"
+
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
+
+            android:name="com.dsphotoeditor.sdk.activity.DsPhotoEditorCropActivity"
+
+            android:screenOrientation="portrait"
+
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
+
+        <activity
+            android:name="com.dsphotoeditor.sdk.activity.DsPhotoEditorDrawActivity"
+
+            android:screenOrientation="portrait"
+
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
     </application>
 
 </manifest>
