--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
-    implementation files('C:\\Users\\Dell\\Downloads\\Android-SDK-Files\\Android SDK Files\\SDK\\ds-photo-editor-sdk-v10.aar')
+    //noinspection GradlePath
+    implementation files('C:/Users/PC/Downloads/Android-SDK-Files/Android SDK Files/SDK/ds-photo-editor-sdk-v10.aar')
     testImplementation 'junit:junit:4.+'
     implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -62,13 +63,26 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+
+
+
     // SDK related dependencies
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
+
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+
+
 
 
 }
